Added getting application status
